--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/reset.css">
+  <link rel="stylesheet" href="./styles/css/reset.css">
   <title></title>
 </head>
 <body>
     <header>
 
       <navbar>
-        
       </navbar>
 
     </header>
