--- a/mentor-profile.html
+++ b/mentor-profile.html
@@ -8,16 +8,45 @@
   <title></title>
 </head>
 <body>
-    <header>
+  <header class="header">
 
-      <navbar>
-        
-      </navbar>
+    <div class="header-profile">
+      <div class="header-profile-image">
+        <img src="#" alt="Foto do perfil da conta">
+      </div>
+      <h1>Cristina Martins</h1>
+      <p> <a href="#">Editar perfil</a> </p>
+    </div>
+    <navbar class="nav">
+      <div class="nav-item">
+        <i class="nav-item-icon">i</i>
+        <a href="#">Página Inicial</a>
+      </div> 
+      <div class="nav-item">
+        <i class="nav-item-icon">i</i>
+        <a href="#">Meus agendamentos</a>
+      </div>
+      <div class="nav-item">
+        <i class="nav-item-icon">i</i>
+        <a href="#">Conversas</a>
+      </div>
+      <div class="nav-item">
+        <i class="nav-item-icon">i</i>
+        <a href="#">Comunidade</a>
+      </div>
+      <div class="nav-item">
+        <i class="nav-item-icon">i</i>
+        <a href="#">Notificações</a>
+      </div>
+      <div class="nav-item">
+        <i class="nav-item-icon">i</i>
+        <a href="#">Salvos</a>
+      </div>
+    </navbar>
 
-    </header>
+  </header>
 
     <main>
-      <h1>hello world hhhhh</h1>
     </main>
 
     <footer>
