about me area creation

--- a/mentor-profile.html
+++ b/mentor-profile.html
@@ -46,7 +46,26 @@
 
   </header>
 
-    <main>
+    <main> 
+
+      <div class="about">
+        <div class="about-header">
+          <h2 class="about-title">Sobre mim</h2>
+          <h2 class="">Conteúdos</h2>
+        </div>
+        <p class="about-biografy">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.</p>
+        <ul class="about-list">Habilidades</ul>
+          <li class="about-list-topic">HTML</li>
+          <li class="about-list-topic">JavaScript</li>
+          <li class="about-list-topic">React</li>
+          <li class="about-list-topic">Java</li>
+          <li class="about-list-topic">PHP</li>
+        <ul class="about-list">Interesses</ul>
+          <li class="about-list-topic">Node.js</li>
+          <li class="about-list-topic">Ruby</li>
+          <li class="about-list-topic">Scrum</li>
+      </div>
+
     </main>
 
     <footer>
