feedbacks's area creation

--- a/mentor-profile.html
+++ b/mentor-profile.html
@@ -66,6 +66,31 @@
           <li class="about-list-topic">Scrum</li>
       </div>
 
+      <div class="feedbacks">
+        <h2 class="feedbacks-title">Avaliações</h2>
+        <div class="feedbacks-card card-1">
+          <p class="feedbacks-card-description">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim.</p>
+          <a class="feedbacks-card-description-more" href="#"></a>
+          <img src="#" alt="Foto de perfil do avaliador">
+          <h3 class="feedbacks-card-name">Gustavo Gomes</h3>
+          <p class="feedbacks-card-job-role">Desenvolvedor</p>
+        </div>
+        <div class="feedbacks-card card-2">
+          <p class="feedbacks-card-description">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim.</p>
+          <a class="feedbacks-card-description-more" href="#"></a>
+          <img src="#" alt="Foto de perfil do avaliador">
+          <h3 class="feedbacks-card-name">Gustavo Gomes</h3>
+          <p class="feedbacks-card-job-role">Desenvolvedor</p>
+        </div>
+        <div class="feedbacks-card card-3">
+          <p class="feedbacks-card-description">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim.</p>
+          <a class="feedbacks-card-description-more" href="#"></a>
+          <img src="#" alt="Foto de perfil do avaliador">
+          <h3 class="feedbacks-card-name">Gustavo Gomes</h3>
+          <p class="feedbacks-card-job-role">Desenvolvedor</p>
+        </div>
+      </div>
+
     </main>
 
     <footer>
@@ -75,3 +100,20 @@
     <script src=""></script>
 </body>
 </html>
+
+<div class="mentors">
+  <h2 class="mentors-title">Mentores indicados para você</h2>
+  <div class="mentors-card card-1">
+    <img src="#" alt="Perfil do Mentor">
+    <h3 class="mentors-card-name">Nome do mentor</h3>
+    <div class="mentors-card-description">
+      <p>Cargo que ocupa</p>
+      <div class="mentors-card-description-specialty">
+        <p>HTML</p>
+        <p>Javascript</p>
+        <p>React</p>
+        <p>+2</p>
+      </div>
+      <button class="mentors-card-btn">Ver Perfil</button>
+    </div>
+  </div>
