separating into section and article

--- a/mentor-profile.html
+++ b/mentor-profile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,9 +8,9 @@
   <link rel="stylesheet" href="./styles/css/reset.css">
   <title></title>
 </head>
-<body>
-  <header class="header">
 
+<body>
+  <aside class="header">
     <div class="header-profile">
       <div class="header-profile-image">
         <img src="#" alt="Foto do perfil da conta">
@@ -21,7 +22,7 @@
       <div class="nav-item">
         <i class="nav-item-icon">i</i>
         <a href="#">Página Inicial</a>
-      </div> 
+      </div>
       <div class="nav-item">
         <i class="nav-item-icon">i</i>
         <a href="#">Meus agendamentos</a>
@@ -43,77 +44,109 @@
         <a href="#">Salvos</a>
       </div>
     </navbar>
+  </aside>
 
-  </header>
+  <main>
+    <section>
 
-    <main> 
-
-      <div class="about">
+      <article class="about">
         <div class="about-header">
           <h2 class="about-title">Sobre mim</h2>
           <h2 class="">Conteúdos</h2>
         </div>
-        <p class="about-biografy">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint deserunt ut voluptate aute id deserunt nisi.</p>
+        <p class="about-biografy">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur
+          duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint
+          deserunt ut voluptate aute id deserunt nisi.</p>
         <ul class="about-list">Habilidades</ul>
-          <li class="about-list-topic">HTML</li>
-          <li class="about-list-topic">JavaScript</li>
-          <li class="about-list-topic">React</li>
-          <li class="about-list-topic">Java</li>
-          <li class="about-list-topic">PHP</li>
+        <li class="about-list-topic">HTML</li>
+        <li class="about-list-topic">JavaScript</li>
+        <li class="about-list-topic">React</li>
+        <li class="about-list-topic">Java</li>
+        <li class="about-list-topic">PHP</li>
         <ul class="about-list">Interesses</ul>
-          <li class="about-list-topic">Node.js</li>
-          <li class="about-list-topic">Ruby</li>
-          <li class="about-list-topic">Scrum</li>
-      </div>
+        <li class="about-list-topic">Node.js</li>
+        <li class="about-list-topic">Ruby</li>
+        <li class="about-list-topic">Scrum</li>
+      </article>
 
-      <div class="feedbacks">
+      <article class="feedbacks">
         <h2 class="feedbacks-title">Avaliações</h2>
         <div class="feedbacks-card card-1">
-          <p class="feedbacks-card-description">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim.</p>
+          <p class="feedbacks-card-description">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui
+            esse pariatur duis deserunt mollit dolore cillum minim tempor enim.</p>
           <a class="feedbacks-card-description-more" href="#"></a>
           <img src="#" alt="Foto de perfil do avaliador">
           <h3 class="feedbacks-card-name">Gustavo Gomes</h3>
           <p class="feedbacks-card-job-role">Desenvolvedor</p>
         </div>
         <div class="feedbacks-card card-2">
-          <p class="feedbacks-card-description">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim.</p>
+          <p class="feedbacks-card-description">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui
+            esse pariatur duis deserunt mollit dolore cillum minim tempor enim.</p>
           <a class="feedbacks-card-description-more" href="#"></a>
           <img src="#" alt="Foto de perfil do avaliador">
           <h3 class="feedbacks-card-name">Gustavo Gomes</h3>
           <p class="feedbacks-card-job-role">Desenvolvedor</p>
         </div>
         <div class="feedbacks-card card-3">
-          <p class="feedbacks-card-description">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim.</p>
+          <p class="feedbacks-card-description">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui
+            esse pariatur duis deserunt mollit dolore cillum minim tempor enim.</p>
           <a class="feedbacks-card-description-more" href="#"></a>
           <img src="#" alt="Foto de perfil do avaliador">
           <h3 class="feedbacks-card-name">Gustavo Gomes</h3>
           <p class="feedbacks-card-job-role">Desenvolvedor</p>
         </div>
-      </div>
+      </article>
 
-    </main>
+      <article class="mentor-profile">
+        <img src="#" alt="Foto de perfil do mentor">
+        <h2 class="mentor-profile-name">Guilherme Lima</h2>
+        <p class="mentor-profile-job-role">Desenvolvedor Sênior</p>
+        <p class="mentor-profile-qualification">Ciência da Computação</p>
+        <ul class="menor-profile-contacts">Preferências de comunicação do mentor
+          <i class="menor-profile-contacts-icon">i</i>
+          <i class="menor-profile-contacts-icon">i</i>
+          <i class="menor-profile-contacts-icon">i</i>
+        </ul>
+      </article>
 
-    <footer>
+      <ul class="mentor-profile-social-media">
+        <i class="menor-profile-social-media-icon">i</i>
+        <i class="menor-profile-social-media-icon">i</i>
+        <i class="menor-profile-social-media-icon">i</i>
+      </ul>
 
-    </footer>
+      <article class="schedule">
+        <p class="schedule-available-title">Dias disponíveis</p>
+        <div class="schedule-available-days-option">
+          <p>Seg</p>
+          <p>20 Abril</p>
+          <p>10 vagas</p>
+        </div>
+        <div class="schedule-available-days-option">
+          <p>Ter</p>
+          <p>21 Abril</p>
+          <p>15 vagas</p>
+        </div>
+        <div class="schedule-available-days-option">
+          <p>Qua</p>
+          <p>22 Abril</p>
+          <p>5 vagas</p>
+        </div>
 
-    <script src=""></script>
+        <p class="schedule-available-title">Horários disponíveis</p>
+        <p class="schedule-available-time-option">9:00</p>
+        <p class="schedule-available-time-option">11:00</p>
+        <p class="schedule-available-time-option">14:00</p>
+        <p class="schedule-available-time-option">16:00</p>
+        <p class="schedule-available-time-option">18:00</p>
+        <p class="schedule-available-time-option">20:00</p>
+        <button class="schedule-btn">Agendar mentoria</button>
+      </article>
+
+    </section>
+  </main>
+
+  <script src=""></script>
 </body>
-</html>
 
-<div class="mentors">
-  <h2 class="mentors-title">Mentores indicados para você</h2>
-  <div class="mentors-card card-1">
-    <img src="#" alt="Perfil do Mentor">
-    <h3 class="mentors-card-name">Nome do mentor</h3>
-    <div class="mentors-card-description">
-      <p>Cargo que ocupa</p>
-      <div class="mentors-card-description-specialty">
-        <p>HTML</p>
-        <p>Javascript</p>
-        <p>React</p>
-        <p>+2</p>
-      </div>
-      <button class="mentors-card-btn">Ver Perfil</button>
-    </div>
-  </div>
+</html>
