--- a/Home-page.html
+++ b/Home-page.html
@@ -5,17 +5,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/css/reset.css">
+  <link rel="stylesheet" href="./styles/css/style-home-page.css">
   <title></title>
 </head>
 <body>
-    <header class="header">
-      <div class="header-profile">
-        <div class="header-profile-image">
+        <!-- ASIDE MENU -->
+
+    <aside class="menu">
+            <!-- PROFILE USER -->
+
+      <div class="profile">
+        <div class="profile-image">
           <img src="#" alt="Foto do perfil da conta">
         </div>
-        <h1>Cristina Martins</h1>
-        <p> <a href="#">Editar perfil</a> </p>
+        <div class="profile-info">
+          <h3>Cristina Martins</h3>
+          <h2> <a href="#">Editar perfil</h2> </p>
+        </div>
       </div>
+            <!-- NAV -->
+
       <navbar class="nav">
         <div class="nav-item">
           <i class="nav-item-icon">i</i>
@@ -43,12 +52,19 @@
         </div>
       </navbar>
 
-    </header>
+    </aside>
 
-    <main>
+    <!-- HEADER -->
+
+    <header class="research">
+
       <div class="research">
         <p>área da barra de pesquisa</p>
       </div>
+    </header>
+
+    <!-- MAIN -->
+    <main class="main">
 
       <div class="mentors">
         <h2 class="mentors-title">Mentores indicados para você</h2>
@@ -95,42 +111,6 @@
           </div>
         </div>
       </div>
-
-      <section class="section">
-        <article class="article">
-          <img src="" alt="Imagem do artigo">
-          <div class="article-footer">
-            <h2 class="article-footer-title">UX Design</h2>
-          <p class="article-footer-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus porro doloremque aliquid libero? Sunt veniam iste minus id atque illo possimus magnam omnis? Repellendus ab doloribus alias voluptatem facere mollitia?</p>
-          <button>+</button>
-          </div>
-        </article>
-        <article class="article">
-          <img src="" alt="Imagem do artigo">
-          <div class="article-footer">
-            <h2 class="article-footer-title">UX Design</h2>
-          <p class="article-footer-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus porro doloremque aliquid libero? Sunt veniam iste minus id atque illo possimus magnam omnis? Repellendus ab doloribus alias voluptatem facere mollitia?</p>
-          <button>+</button>
-          </div>
-        </article>
-      </section>
     </main>
-    <aside class="diary">
-      <h2 class="diary-title">Seu calendário!</h2>
-      <div class="diary-calendar">
-        área do calendário
-      </div>
-      <p>Mentorias marcadas:</p>
-      <div class="diary-mentorships">
-        <div class="diary-mentorships-image">
-          <img src="" alt="Perfil do mentor">
-        </div>
-        <div class="diary-mentorships-description">
-          <p class="name-mentor">Nome do mentor</p>
-          <p>Data:</p> <p>22/04/2022</p>
-          <p>Horário:</p> <p>15hs às 16hs</p>
-        </div>
-      </div>
-    </aside>
 </body>
 </html>
