Estrutura do Navbar

--- a/Home-page.html
+++ b/Home-page.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/css/reset.css">
+  <link rel="stylesheet" href="./styles/css/style-Aside.css">
   <link rel="stylesheet" href="./styles/css/style-home-page.css">
   <title></title>
 </head>
@@ -36,19 +37,7 @@
         </div>
         <div class="nav-item">
           <i class="nav-item-icon">i</i>
-          <a href="#">Conversas</a>
-        </div>
-        <div class="nav-item">
-          <i class="nav-item-icon">i</i>
-          <a href="#">Comunidade</a>
-        </div>
-        <div class="nav-item">
-          <i class="nav-item-icon">i</i>
           <a href="#">Notificações</a>
-        </div>
-        <div class="nav-item">
-          <i class="nav-item-icon">i</i>
-          <a href="#">Salvos</a>
         </div>
       </navbar>
 
@@ -65,7 +54,6 @@
 
     <!-- MAIN -->
     <main class="main">
-
       <div class="mentors">
         <h2 class="mentors-title">Mentores indicados para você</h2>
         <div class="mentors-card card-1">
@@ -97,6 +85,132 @@
           </div>
         </div>
         <div class="mentors-card card-3">
+          <img src="#" alt="Perfil do mentor">
+          <h3 class="mentors-card-name">Nome do mentor</h3>
+          <div class="mentors-card-description">
+            <p>Cargo que ocupa</p>
+            <div class="mentors-card-description-specialty">
+              <p>HTML</p>
+              <p>Javascript</p>
+              <p>React</p>
+              <p>+2</p>
+            </div>
+            <button class="mentors-card-btn">Ver Perfil</button>
+          </div>
+        </div>
+        <div class="mentors-card card-4">
+          <img src="#" alt="Perfil do mentor">
+          <h3 class="mentors-card-name">Nome do mentor</h3>
+          <div class="mentors-card-description">
+            <p>Cargo que ocupa</p>
+            <div class="mentors-card-description-specialty">
+              <p>HTML</p>
+              <p>Javascript</p>
+              <p>React</p>
+              <p>+2</p>
+            </div>
+            <button class="mentors-card-btn">Ver Perfil</button>
+          </div>
+        </div>
+        <div class="mentors-card card-5">
+          <img src="#" alt="Perfil do mentor">
+          <h3 class="mentors-card-name">Nome do mentor</h3>
+          <div class="mentors-card-description">
+            <p>Cargo que ocupa</p>
+            <div class="mentors-card-description-specialty">
+              <p>HTML</p>
+              <p>Javascript</p>
+              <p>React</p>
+              <p>+2</p>
+            </div>
+            <button class="mentors-card-btn">Ver Perfil</button>
+          </div>
+        </div>
+        <div class="mentors-card card-6">
+          <img src="#" alt="Perfil do mentor">
+          <h3 class="mentors-card-name">Nome do mentor</h3>
+          <div class="mentors-card-description">
+            <p>Cargo que ocupa</p>
+            <div class="mentors-card-description-specialty">
+              <p>HTML</p>
+              <p>Javascript</p>
+              <p>React</p>
+              <p>+2</p>
+            </div>
+            <button class="mentors-card-btn">Ver Perfil</button>
+          </div>
+        </div>
+        <div class="mentors-card card-7">
+          <img src="#" alt="Perfil do mentor">
+          <h3 class="mentors-card-name">Nome do mentor</h3>
+          <div class="mentors-card-description">
+            <p>Cargo que ocupa</p>
+            <div class="mentors-card-description-specialty">
+              <p>HTML</p>
+              <p>Javascript</p>
+              <p>React</p>
+              <p>+2</p>
+            </div>
+            <button class="mentors-card-btn">Ver Perfil</button>
+          </div>
+        </div>
+        <div class="mentors-card card-8">
+          <img src="#" alt="Perfil do mentor">
+          <h3 class="mentors-card-name">Nome do mentor</h3>
+          <div class="mentors-card-description">
+            <p>Cargo que ocupa</p>
+            <div class="mentors-card-description-specialty">
+              <p>HTML</p>
+              <p>Javascript</p>
+              <p>React</p>
+              <p>+2</p>
+            </div>
+            <button class="mentors-card-btn">Ver Perfil</button>
+          </div>
+        </div>
+        <div class="mentors-card card-9">
+          <img src="#" alt="Perfil do mentor">
+          <h3 class="mentors-card-name">Nome do mentor</h3>
+          <div class="mentors-card-description">
+            <p>Cargo que ocupa</p>
+            <div class="mentors-card-description-specialty">
+              <p>HTML</p>
+              <p>Javascript</p>
+              <p>React</p>
+              <p>+2</p>
+            </div>
+            <button class="mentors-card-btn">Ver Perfil</button>
+          </div>
+        </div>
+        <div class="mentors-card card-10">
+          <img src="#" alt="Perfil do mentor">
+          <h3 class="mentors-card-name">Nome do mentor</h3>
+          <div class="mentors-card-description">
+            <p>Cargo que ocupa</p>
+            <div class="mentors-card-description-specialty">
+              <p>HTML</p>
+              <p>Javascript</p>
+              <p>React</p>
+              <p>+2</p>
+            </div>
+            <button class="mentors-card-btn">Ver Perfil</button>
+          </div>
+        </div>
+        <div class="mentors-card card-11">
+          <img src="#" alt="Perfil do mentor">
+          <h3 class="mentors-card-name">Nome do mentor</h3>
+          <div class="mentors-card-description">
+            <p>Cargo que ocupa</p>
+            <div class="mentors-card-description-specialty">
+              <p>HTML</p>
+              <p>Javascript</p>
+              <p>React</p>
+              <p>+2</p>
+            </div>
+            <button class="mentors-card-btn">Ver Perfil</button>
+          </div>
+        </div>
+        <div class="mentors-card card-12">
           <img src="#" alt="Perfil do mentor">
           <h3 class="mentors-card-name">Nome do mentor</h3>
           <div class="mentors-card-description">
