organizing mentor-profile article

--- a/mentor-profile.html
+++ b/mentor-profile.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/css/reset.css">
+  <link rel="stylesheet" href="./styles/css/style-aside.css">
   <title></title>
 </head>
 
@@ -14,7 +15,7 @@
     <header class="main-header">
       <img src="#" alt="Foto de capa do mentor">
     </header>
-    
+
     <section>
       <article class="about">
         <h2 class="about-title">Sobre mim</h2>
@@ -33,20 +34,20 @@
       <article class="mentor-profile">
         <img src="#" alt="Foto de perfil do mentor">
         <h2 class="mentor-profile-name">Guilherme Lima</h2>
-        <p class="mentor-profile-job-role">Desenvolvedor Sênior</p>
-        <p class="mentor-profile-qualification">Ciência da Computação</p>
-        <ul class="menor-profile-contacts">Preferências de comunicação do mentor
-          <i class="menor-profile-contacts-icon">i</i>
-          <i class="menor-profile-contacts-icon">i</i>
-          <i class="menor-profile-contacts-icon">i</i>
+        <h3 class="mentor-profile-job-role">Desenvolvedor Sênior</h3>
+        <h3 class="mentor-profile-qualification">Ciência da Computação</h3>
+        <ul class="mentor-profile-contacts"><h3>Preferências de comunicação do mentor</h3>
+          <i class="mentor-profile-contacts-icon">i</i>
+          <i class="mentor-profile-contacts-icon">i</i>
+          <i class="mentor-profile-contacts-icon">i</i>
+        </ul>
+      
+        <ul class="mentor-profile-social-media">
+          <i class="menor-profile-social-media-icon">i</i>
+          <i class="menor-profile-social-media-icon">i</i>
+          <i class="menor-profile-social-media-icon">i</i>
         </ul>
       </article>
-
-      <ul class="mentor-profile-social-media">
-        <i class="menor-profile-social-media-icon">i</i>
-        <i class="menor-profile-social-media-icon">i</i>
-        <i class="menor-profile-social-media-icon">i</i>
-      </ul>
 
       <article class="schedule">
         <table>
@@ -92,13 +93,45 @@
               <h4>26 Abr</h4>
             </div>
           </th>
-          <tr> <!--linha-->
-            <td>8:00</td> <!--coluna-->
-            <td>9:00</td>
+          <tr> <!--new line-->
+            <td>08:00</td> 
+            <td>08:00</td>
+            <td>08:00</td>
+            <td>08:00</td>
+            <td>08:00</td>
+            <td>08:00</td>
+            <td>08:00</td>
+          </tr>
+          <tr> <!--new line-->
+            <td>09:00</td> 
+            <td>09:00</td>
+            <td>09:00</td>
+            <td>09:00</td>
+            <td>09:00</td>
+            <td>09:00</td>
+            <td>09:00</td>
+          </tr>
+          <tr> <!--new line-->
+            <td>10:00</td> 
+            <td>10:00</td>
+            <td>10:00</td>
+            <td>10:00</td>
+            <td>10:00</td>
+            <td>10:00</td>
+            <td>10:00</td>
+          </tr>
+          <tr> <!--new line-->
+            <td>11:00</td> 
+            <td>11:00</td>
+            <td>11:00</td>
+            <td>11:00</td>
+            <td>11:00</td>
+            <td>11:00</td>
+            <td>11:00</td>
           </tr>
         </table>
-      </article>
 
+      </article>
     </section>
   </main>
 
