changes on html structure

--- a/mentor-profile.html
+++ b/mentor-profile.html
@@ -35,22 +35,25 @@
         <img src="#" alt="Foto de perfil do mentor">
         <h2 class="mentor-profile-name">Guilherme Lima</h2>
         <h3 class="mentor-profile-job-role">Desenvolvedor Sênior</h3>
+        <hr class="divider">
         <h3 class="mentor-profile-qualification">Ciência da Computação</h3>
+        <hr class="divider">
+        <ul class="mentor-profile-social-media">
+          <i class="menor-profile-social-media-icon">i</i>
+          <i class="menor-profile-social-media-icon">i</i>
+          <i class="menor-profile-social-media-icon">i</i>
+        </ul>
         <ul class="mentor-profile-contacts"><h3>Preferências de comunicação do mentor</h3>
           <i class="mentor-profile-contacts-icon">i</i>
           <i class="mentor-profile-contacts-icon">i</i>
           <i class="mentor-profile-contacts-icon">i</i>
         </ul>
       
-        <ul class="mentor-profile-social-media">
-          <i class="menor-profile-social-media-icon">i</i>
-          <i class="menor-profile-social-media-icon">i</i>
-          <i class="menor-profile-social-media-icon">i</i>
-        </ul>
       </article>
 
       <article class="schedule">
         <table>
+          <h3 class="table-month-year">Abril 2022</h3>
           <th>
             <div>
               <h3>Segunda</h3>
@@ -69,45 +72,15 @@
               <h4>22 Abr</h4>
             </div>
           </th>
-          <th>
-            <div>
-              <h3>Quinta</h3>
-              <h4>23 Abr</h4>
-            </div>
-          </th>
-          <th>
-            <div>
-              <h3>Sexta</h3>
-              <h4>24 Abr</h4>
-            </div>
-          </th>
-          <th>
-            <div>
-              <h3>Sábado</h3>
-              <h4>25 Abr</h4>
-            </div>
-          </th>
-          <th>
-            <div>
-              <h3>Domingo</h3>
-              <h4>26 Abr</h4>
-            </div>
-          </th>
+          
           <tr> <!--new line-->
             <td>08:00</td> 
             <td>08:00</td>
             <td>08:00</td>
-            <td>08:00</td>
-            <td>08:00</td>
-            <td>08:00</td>
-            <td>08:00</td>
+
           </tr>
           <tr> <!--new line-->
             <td>09:00</td> 
-            <td>09:00</td>
-            <td>09:00</td>
-            <td>09:00</td>
-            <td>09:00</td>
             <td>09:00</td>
             <td>09:00</td>
           </tr>
@@ -115,17 +88,9 @@
             <td>10:00</td> 
             <td>10:00</td>
             <td>10:00</td>
-            <td>10:00</td>
-            <td>10:00</td>
-            <td>10:00</td>
-            <td>10:00</td>
           </tr>
           <tr> <!--new line-->
             <td>11:00</td> 
-            <td>11:00</td>
-            <td>11:00</td>
-            <td>11:00</td>
-            <td>11:00</td>
             <td>11:00</td>
             <td>11:00</td>
           </tr>
