modifies on mentor-profile's file

--- a/mentor-profile.html
+++ b/mentor-profile.html
@@ -7,6 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./styles/css/reset.css">
   <link rel="stylesheet" href="./styles/css/style-aside.css">
+  <link rel="stylesheet" href="./styles/css/mentor.css">
+  <link rel="stylesheet" href="./styles/css/response.css">
   <title></title>
 </head>
 
@@ -16,20 +18,8 @@
       <img src="#" alt="Foto de capa do mentor">
     </header>
 
+    
     <section>
-      <article class="about">
-        <h2 class="about-title">Sobre mim</h2>
-        <p class="about-biografy">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur
-        duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint
-        deserunt ut voluptate aute id deserunt nisi.</p>
-        <ul class="skills-list-title">Habilidades</ul>
-        <li class="skills-list-topic">HTML</li>
-        <li class="skills-list-topic">JavaScript</li>
-        <li class="skills-list-topic">React</li>
-        <li class="skills-list-topic">Java</li>
-        <li class="skills-list-topic">PHP</li>
-        <li class="skills-list-topic">C#</li>
-      </article>
 
       <article class="mentor-profile">
         <img src="#" alt="Foto de perfil do mentor">
@@ -49,6 +39,20 @@
           <i class="mentor-profile-contacts-icon">i</i>
         </ul>
       
+      </article>
+
+      <article class="about">
+        <h2 class="about-title">Sobre mim</h2>
+        <p class="about-biografy">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur
+        duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint
+        deserunt ut voluptate aute id deserunt nisi.</p>
+        <ul class="skills-list-title">Habilidades</ul>
+        <li class="skills-list-topic">HTML</li>
+        <li class="skills-list-topic">JavaScript</li>
+        <li class="skills-list-topic">React</li>
+        <li class="skills-list-topic">Java</li>
+        <li class="skills-list-topic">PHP</li>
+        <li class="skills-list-topic">C#</li>
       </article>
 
       <article class="schedule">
