linking to font-size css file

--- a/mentor-profile.html
+++ b/mentor-profile.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="./styles/css/style-aside.css">
   <link rel="stylesheet" href="./styles/css/mentor-profile.css">
   <link rel="stylesheet" href="./styles/css/root.css">
+  <link rel="stylesheet" href="./styles/css/font-size.css">
   <title></title>
 </head>
 
