changing font size

--- a/mentor-profile.html
+++ b/mentor-profile.html
@@ -29,9 +29,9 @@
 
         <div class="mentor-profile-main-div">
           <h2 class="mentor-profile-name font22">Guilherme Lima</h2>
-          <h3 class="mentor-profile-job-role font22">Desenvolvedor Sênior</h3>
+          <h3 class="mentor-profile-job-role font16">Desenvolvedor Sênior</h3>
           <hr class="divider">
-          <h3 class="mentor-profile-qualification">Ciência da Computação</h3>
+          <h3 class="mentor-profile-qualification font16">Ciência da Computação</h3>
           <hr class="divider">
           <ul class="mentor-profile-social-media">
             <i class="menor-profile-social-media-icon">i</i>
@@ -40,7 +40,7 @@
           </ul>
         </div>
         
-          <ul class="mentor-profile-contacts"><h3>Preferências de comunicação do mentor</h3>
+          <ul class="mentor-profile-contacts"><h3 class="font14">Preferências de comunicação do mentor</h3>
           <i class="mentor-profile-contacts-icon">i</i>
           <i class="mentor-profile-contacts-icon">i</i>
           <i class="mentor-profile-contacts-icon">i</i>
@@ -49,22 +49,23 @@
       </article>
 
       <article class="about">
-        <h2 class="about-title">Sobre mim</h2>
-        <p class="about-biografy">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur
+        <h2 class="about-title font18">Sobre mim</h2>
+        <p class="about-biografy font16">Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur
         duis deserunt mollit dolore cillum minim tempor enim. Elit aute irure tempor cupidatat incididunt sint
         deserunt ut voluptate aute id deserunt nisi.</p>
-        <ul class="skills-list-title">Habilidades</ul>
-        <li class="skills-list-topic">HTML</li>
-        <li class="skills-list-topic">JavaScript</li>
-        <li class="skills-list-topic">React</li>
-        <li class="skills-list-topic">Java</li>
-        <li class="skills-list-topic">PHP</li>
-        <li class="skills-list-topic">C#</li>
+        <ul class="skills-list-title"><h2 class="font18">Habilidades</h2></ul>
+        <li class="skills-list-topic font14">HTML</li>
+        <li class="skills-list-topic font14">JavaScript</li>
+        <li class="skills-list-topic font14">React</li>
+        <li class="skills-list-topic font14">Java</li>
+        <li class="skills-list-topic font14">PHP</li>
+        <li class="skills-list-topic font14">C#</li>
       </article>
 
       <article class="schedule">
-        <table>
-          <h3 class="table-month-year">Abril 2022</h3>
+        <h2 class="font18">Dia/Hora</h2>
+        <table class="font16">
+          <h3 class="table-month-year font16">Abril 2022</h3>
           <th>
             <div>
               <h3>Segunda</h3>
