saving some new structures on css

--- a/mentor-profile.html
+++ b/mentor-profile.html
@@ -72,50 +72,59 @@
         </ul>
       </article>
 
-      <article class="schedule">
-        <h2 class="schedule-title font18">Dia/Hora</h2>
-        <table class="font16">
-          <h3 class="schedule-title-table font16">Abril 2022</h3>
+      <article class="schedule-article">
+        <span class="schedule-title+icon">
+          <h2 class="schedule-title font18">Dia/Hora</h2>
+          <i class="schedule-help-icon">i</i>
+        </span>
+        <table class="schedule-table font16">
+
+          <tr class="schedule-month-year">
+            <h3 class=" font16">Abril 2022   
+            </h3>
+          </tr>
+
           <th>
-            <div>
+            <div class="schedule-day">
               <h3>Segunda</h3>
               <h4>20 Abr</h4>
             </div>
           </th>
           <th>
-            <div>
+            <div class="schedule-day">
               <h3>Terça</h3>
               <h4>21 Abr</h4>
             </div>
           </th>
           <th>
-            <div>
+            <div class="schedule-day">
               <h3>Quarta</h3>
               <h4>22 Abr</h4>
             </div>
           </th>
-          
-          <tr> <!--new line-->
-            <td>08:00</td> 
-            <td>08:00</td>
-            <td>08:00</td>
+          <div class="schedule-time">
+            <tr> <!--new line-->
+              <td>08:00</td> 
+              <td>08:00</td>
+              <td>08:00</td>
+            </tr>
+            <tr> <!--new line-->
+              <td>09:00</td> 
+              <td>09:00</td>
+              <td>09:00</td>
+            </tr>
+            <tr> <!--new line-->
+              <td>10:00</td> 
+              <td>10:00</td>
+              <td>10:00</td>
+            </tr>
+            <tr> <!--new line-->
+              <td>11:00</td> 
+              <td>11:00</td>
+              <td>11:00</td>
+            </tr>
+          </div>
 
-          </tr>
-          <tr> <!--new line-->
-            <td>09:00</td> 
-            <td>09:00</td>
-            <td>09:00</td>
-          </tr>
-          <tr> <!--new line-->
-            <td>10:00</td> 
-            <td>10:00</td>
-            <td>10:00</td>
-          </tr>
-          <tr> <!--new line-->
-            <td>11:00</td> 
-            <td>11:00</td>
-            <td>11:00</td>
-          </tr>
         </table>
         <button type="submit" class="schedule-button font20">Agendar mentoria</button>
 
